# hnefatafl

./: Hnef research.pages  README.md  hnefatafl_best.py  minimax.py  play.py  pyproject.toml  seven_by_seven.py  test.py  tkinter_test.py
agents/: agent.py
game/: board.py  piece.py
old/: hnefatafl.py  hnefatafl_7x7.py  hnefatafl_v2.py  seven_by_seven.ipynb
search/: tree.py
src/: board.py  hnefatafl.py  peice.py  piece.py
src2/: main-random-20220403.py  main.py  stat.py  todo.txt  train.py
src2/data/: train_data_202207161004.json  train_data_202207161355.json  train_data_202207161402.json  train_data_202207161406.json
src3/: board.py
utils/: encoder.py  game_data.py
